[package]
name = "httplib-rs"
version = "0.1.0"
authors = ["Bram Vandenbogaerde <contact@bramvdb.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
surf = "1.0.3"
serde = "1.0.0"
serde_json = "1.0.0"
log ="0.4.11"
